Opened 14 years ago
Closed 14 years ago
#2029 closed defect (fixed)
mxf op1a audio has wrong duration and bitrate
| Reported by: | cbsrobot | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mxf regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
ffplay Kinderfilmtage_2012.A.mxf
ffplay version N-47450-g217b10d Copyright (c) 2003-2012 the FFmpeg developers
built on Dec 5 2012 12:23:41 with Apple clang version 4.1 (tags/Apple/clang-421.11.65) (based on LLVM 3.1svn)
configuration: --enable-gpl --enable-version3 --enable-nonfree --enable-postproc --enable-libfaac --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libtheora --enable-libvorbis --enable-libx264 --enable-libxvid --enable-libvpx --enable-libmp3lame --enable-libfreetype --enable-libopenjpeg --enable-libass --enable-libvo-aacenc --enable-libaacplus --enable-frei0r --enable-libfdk-aac --cc=clang --prefix=/usr/local
libavutil 52. 11.101 / 52. 11.101
libavcodec 54. 79.100 / 54. 79.100
libavformat 54. 44.100 / 54. 44.100
libavdevice 54. 3.102 / 54. 3.102
libavfilter 3. 24.100 / 3. 24.100
libswscale 2. 1.103 / 2. 1.103
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 2.100 / 52. 2.100
[mxf @ 0x7f8a24803c00] "OPAtom" with 2 ECs - assuming OP1a
Input #0, mxf, from 'Kinderfilmtage_2012.A.mxf':
Metadata:
timecode : 00:00:00:00
Duration: 00:00:00.01, start: 0.000000, bitrate: -2147483 kb/s
Stream #0:0: Audio: pcm_s24le, 48000 Hz, 2 channels, s32, 2304 kb/s
15.98 A-V: 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
the file is playable with ffplay.
The correct duration should be: 00:00:15.00
Change History (9)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
| Component: | avcodec → undetermined |
|---|
Please add the complete, uncut console output of "ffmpeg -i Kinderfilmtage_2012.A.mxf -f null -", the output will also show the actual duration.
Generally, please do not post ffplay output unless a problem is only reproducible with ffplay but not with ffmpeg.
comment:3 by , 14 years ago
Sorry, I pasted the wrong clipboard. Here it is:
ffmpeg -i Kinderfilmtage_2012.A.mxf
ffmpeg version N-47450-g217b10d Copyright (c) 2000-2012 the FFmpeg developers
built on Dec 5 2012 12:23:41 with Apple clang version 4.1 (tags/Apple/clang-421.11.65) (based on LLVM 3.1svn)
configuration: --enable-gpl --enable-version3 --enable-nonfree --enable-postproc --enable-libfaac --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libtheora --enable-libvorbis --enable-libx264 --enable-libxvid --enable-libvpx --enable-libmp3lame --enable-libfreetype --enable-libopenjpeg --enable-libass --enable-libvo-aacenc --enable-libaacplus --enable-frei0r --enable-libfdk-aac --cc=clang --prefix=/usr/local
libavutil 52. 11.101 / 52. 11.101
libavcodec 54. 79.100 / 54. 79.100
libavformat 54. 44.100 / 54. 44.100
libavdevice 54. 3.102 / 54. 3.102
libavfilter 3. 24.100 / 3. 24.100
libswscale 2. 1.103 / 2. 1.103
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 2.100 / 52. 2.100
[mxf @ 0x7fea9984ae00] "OPAtom" with 2 ECs - assuming OP1a
Guessed Channel Layout for Input Stream #0.0 : stereo
Input #0, mxf, from 'Kinderfilmtage_2012.A.mxf':
Metadata:
timecode : 00:00:00:00
Duration: 00:00:00.01, start: 0.000000, bitrate: -2147483 kb/s
Stream #0:0: Audio: pcm_s24le, 48000 Hz, stereo, s32, 2304 kb/s
At least one output file must be specified
comment:4 by , 14 years ago
| Status: | new → open |
|---|
Regression: the duration looks fine in c581cb4, but not in current master (b6e7041). I'll try a bisect to find where it went wrong.
comment:5 by , 14 years ago
The bad commit is 83cab07: "mxfdec: set audio packets pts"
My guess is that the way that SampleRate replaced EditRate for st->time_base messed up the duration. This should hopefully be easy enough to fix.
comment:7 by , 14 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | regression added |
| Reproduced by developer: | set |
comment:8 by , 14 years ago
| Priority: | normal → important |
|---|



Here is the file: http://www.datafilehost.com/download-9062f723.html